--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,45 +310,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to operator (<ipython-input-3-97e2c418a25a>, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-97e2c418a25a>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    ganfalf + saruman / totalClashes = mean\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to operator\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Gandalf 39.0\n",
+      "Mean Saruman 30.5\n"
      ]
     }
    ],
    "source": [
-    "POWER = {\n",
-    "    'Fireball': 50, \n",
-    "    'Lightning bolt': 40, \n",
-    "    'Magic arrow': 10, \n",
-    "    'Black Tentacles': 25, \n",
-    "    'Contagion': 45\n",
-    "}\n",
+    "import math\n",
     "\n",
-    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
-    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "Gandalfsp = []\n",
+    "Sarumansp = []\n",
     "\n",
-    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
-    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "for i in gandalf:\n",
+    "    Gandalfsp.append(POWER.get(i))\n",
     "\n",
+    "for i in saruman:\n",
+    "    Sarumansp.append(POWER.get(i))\n",
     "\n",
+    "mean_gandalf = sum(Gandalfsp) / len(Gandalfsp)\n",
+    "mean_saruman = sum(Sarumansp) / len(Sarumansp)\n",
     "\n",
-    "currentClash = 0\n",
-    "\n",
-    "totalClashes = 10\n",
-    "\n",
-    "while totalClashes == 10:\n",
-    "    ganfalf + saruman / totalClashes = mean\n",
-    "mean = ganfalf + saruman / totalClashes\n",
-    "\n",
-    "print(mean,\"spell power\")\n",
-    "\n"
+    "print('Mean Gandalf', mean_gandalf)\n",
+    "print('Mean Saruman', mean_saruman)"
    ]
   },
   {
@@ -356,6 +346,30 @@
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard deviation of Gandalf 15.951314818673865\n",
+      "Standard deviation of Saruman 16.40629960309962\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "Standard_deviation_Gandalf = statistics.stdev(Gandalf_spells)\n",
+    "Standard_deviation_Saruman = statistics.stdev(Saruman_spells)\n",
+    "\n",
+    "print('Standard deviation of Gandalf', Standard_deviation_Gandalf)\n",
+    "print('Standard deviation of Saruman', Standard_deviation_Saruman)"
    ]
   },
   {
