--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -32,15 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
-    "ROCK = '1'\n",
-    "PAPER = '2'\n",
-    "SCISSORS = '3'"
+    "import random"
    ]
   },
   {
@@ -52,29 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = {\n",
+    "ROCK = '1'\n",
+    "PAPER = '2'\n",
+    "SCISSORS = '3'\n",
+    "\n",
+    "gestures = {\n",
     "    ROCK: 'ROCK', \n",
     "    PAPER: 'PAPER', \n",
     "    SCISSORS: 'SCISSORS',\n",
     "    'q': 'QUIT'\n",
-    "}\n",
-    "\n",
-    "beats = {\n",
-    "    ROCK: [SCISSORS],\n",
-    "    PAPER: [ROCK],\n",
-    "    SCISSORS: [PAPER],\n",
-    "    \n",
-    "}\n",
-    "\n",
-    "playerSelection = None\n",
-    "\n",
-    "score = {\n",
-    "    'PLAYER': 0,\n",
-    "    'CPU': 0,\n",
     "}"
    ]
   },
@@ -88,13 +74,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_round = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Create a variable called `rounds_to_win` to store the number of rounds that a player must win to win the game.\n",
+    "**Hint**: the value stored in `rounds_to_win` depends on the value of `n_rounds`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rounds_to_win = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Create two variables to store the number of rounds that the computer and the player have won. Call these variables `cpu_score` and `player_score`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Define a function that randomly returns one of the 3 gesture options.\n",
+    "You will use this function to simulate the gesture choice of the computer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ROCK(1), PAPER(2), SCISSORS(3), QUIT(q)\n",
+      "q\n",
+      "Player selected QUIT\n",
+      "CPU selected SCISSORS\n",
+      "\n",
+      ">>> Command not defined!\n",
+      "\n",
+      "SCORE\n",
+      "PLAYER 0\n",
+      "CPU 0\n",
+      ">>>> TIE\n",
+      "\n",
+      "BYE!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "ROCK = '1'\n",
+    "PAPER = '2'\n",
+    "SCISSORS = '3'\n",
+    "LIZARD = '4'\n",
+    "SPOCK = '5'\n",
+    "\n",
+    "options = {\n",
+    "    ROCK: 'ROCK', \n",
+    "    PAPER: 'PAPER', \n",
+    "    SCISSORS: 'SCISSORS',\n",
+    "    'q': 'QUIT'\n",
+    "}\n",
+    "\n",
+    "beats = {\n",
+    "    ROCK: [SCISSORS],\n",
+    "    PAPER: [ROCK],\n",
+    "    SCISSORS: [PAPER],\n",
+    "\n",
+    "}\n",
+    "\n",
+    "playerSelection = None\n",
+    "\n",
+    "score = {\n",
+    "    'PLAYER': 0,\n",
+    "    'CPU': 0,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
     "while playerSelection != 'q':\n",
     "    try:\n",
-    "        print(f\"\\nROCK({ROCK}), PAPER({PAPER}), SCISSORS({SCISSORS}),QUIT(q)\")\n",
+    "        print(f\"\\nROCK({ROCK}), PAPER({PAPER}), SCISSORS({SCISSORS}), QUIT(q)\")\n",
     "        playerSelection = input() \n",
     "        \n",
     "        print('Player selected', options[playerSelection])\n",
@@ -103,7 +192,14 @@
     "\n",
     "        print('CPU selected', options[cpuSelection])\n",
     "\n",
-    "        \n",
+    "        if cpuSelection == playerSelection:\n",
+    "            print('>>>>>>>> TIE!')\n",
+    "        elif cpuSelection in beats[playerSelection]:\n",
+    "            score['PLAYER'] = score['PLAYER'] + 1\n",
+    "            print('>>>>>>>> PLAYER wins!')\n",
+    "        else: \n",
+    "            score['CPU'] = score['CPU'] + 1\n",
+    "            print('>>>>>>>> CPU wins!')\n",
     "\n",
     "    except KeyError:\n",
     "        print(\"\\n>>> Command not defined!\")\n",
@@ -120,53 +216,8 @@
     "else:\n",
     "    print('>>>> CPU IS THE WINNER')\n",
     "\n",
-    "\n",
     "print(\"\\nBYE!\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. Create a variable called `rounds_to_win` to store the number of rounds that a player must win to win the game.\n",
-    "**Hint**: the value stored in `rounds_to_win` depends on the value of `n_rounds`. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Create two variables to store the number of rounds that the computer and the player have won. Call these variables `cpu_score` and `player_score`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 6. Define a function that randomly returns one of the 3 gesture options.\n",
-    "You will use this function to simulate the gesture choice of the computer. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -196,7 +247,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,43 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
-      "1\n",
-      "Player selected ROCK\n",
-      "CPU selected PAPER\n",
-      ">>>>>>>> CPU wins!\n",
-      "\n",
-      "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
-      "2\n",
-      "Player selected PAPER\n",
-      "CPU selected PAPER\n",
-      ">>>>>>>> TIE!\n",
-      "\n",
-      "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
-      "3\n",
-      "Player selected SCISSORS\n",
-      "CPU selected PAPER\n",
-      ">>>>>>>> PLAYER wins!\n",
-      "\n",
-      "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
-      "4\n",
-      "Player selected LIZARD\n",
-      "CPU selected PAPER\n",
-      ">>>>>>>> PLAYER wins!\n",
-      "\n",
-      "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
-      "5\n",
-      "Player selected SPOCK\n",
-      "CPU selected SCISSORS\n",
-      ">>>>>>>> PLAYER wins!\n",
       "\n",
       "ROCK(1), PAPER(2), SCISSORS(3), LIZARD(4), SPOCK(5), QUIT(q)\n",
       "q\n",
@@ -308,9 +331,9 @@
       ">>> Command not defined!\n",
       "\n",
       "SCORE\n",
-      "PLAYER 3\n",
-      "CPU 1\n",
-      ">>>> PLAYER IS THE WINNER\n",
+      "PLAYER 0\n",
+      "CPU 0\n",
+      ">>>> TIE\n",
       "\n",
       "BYE!\n"
      ]
