--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,12 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperatures greater than 70 [70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
    "source": [
-    "greaterThan70 = getAllTemperaturesAbove(temperatures, 70)\n",
-    "    \n"
+    "greaterThan70 = getAllTemperaturesAbove(temperatures_C, 70) \n",
+    "print('temperatures greater than 70', greaterThan70)"
    ]
   },
   {
@@ -130,10 +138,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean temperature 60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "meanTemperature = mean(temperatures_C)\n",
+    "print('mean temperature', meanTemperature)\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "def mean(values):\n",
+    "    return sum(values)/len(values)\n",
+    "\n",
+    "\n",
+    "def stdDev(values):\n",
+    "\n",
+    "    meanValue = mean(values)\n",
+    "\n",
+    "    totalSum = 0\n",
+    "    for value in values:\n",
+    "        totalSum = totalSum + math.pow(value - meanValue, 2)\n",
+    "\n",
+    "    return math.sqrt(totalSum/len(values))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def lerp(pointMin, pointMax, x):\n",
+    "    x2minusx1 = x - pointMin[0]\n",
+    "    y3minusy1 = pointMax[1] - pointMin[1]\n",
+    "    x3minusx1 = pointMax[0]-pointMin[0]\n",
+    "    return (x2minusx1*y3minusy1/x3minusx1) + pointMin[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +204,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "missing by linear interpolation 62.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def celciusToFahrenheit(value):\n",
+    "    return 1.8 * value + 32;\n",
+    "    \n",
+    "def getAllTemperaturesAbove(temperatures, value):\n",
+    "    greaterThanValue = []\n",
+    "\n",
+    "    for temperature in temperatures:\n",
+    "        if temperature >= value:\n",
+    "            greaterThanValue.append(temperature)\n",
+    "    \n",
+    "    return greaterThanValue\n",
+    "\n",
+    "print('missing by linear interpolation', lerp((2,65), (4,59), 3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +248,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperatures in F [91.4, 150.8, 149.0, 32.0, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n",
+      "\n",
+      ">>>More than 4 temperatures are greater than or equal to 70ºC.\n",
+      "True\n",
+      ">>>Any temperature is above 80ºC.\n",
+      "True\n",
+      ">>>The average temperature exceeds 65ºC.\n",
+      "False\n",
+      "System needs replacement: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperaturesInF = []\n",
+    "\n",
+    "for temperature in temperatures_C:\n",
+    "    temperaturesInF.append(celciusToFahrenheit(temperature))\n",
+    "\n",
+    "print('temperatures in F', temperaturesInF)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print('>>>More than 4 temperatures are greater than or equal to 70ºC.')\n",
+    "caseA = len(greaterThan70) > 4\n",
+    "print(caseA)\n",
+    "    \n",
+    "print('>>>Any temperature is above 80ºC.')\n",
+    "caseB = len(getAllTemperaturesAbove(temperatures_C, 80)) > 0\n",
+    "print(caseB)\n",
+    "\n",
+    "print('>>>The average temperature exceeds 65ºC.')\n",
+    "caseC = meanTemperature > 65\n",
+    "print(caseC)\n",
+    "\n",
+    "needsReplacement = caseA and caseB and caseC\n",
+    "print('System needs replacement:', needsReplacement)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list :[0,  1,  2,  3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,  14,  15,  16,  17,  18,  19,  20,  21,  22, 23]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,10 +329,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">>>The temperature is greater than 70ºC during more than 4 consecutive hours\n",
+      "True\n",
+      ">>>Any temperature is above 80ºC.\n",
+      "True\n",
+      ">>>The average temperature exceeds 65ºC.\n",
+      "False\n",
+      "System needs replacement: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for temperature in temperatures_C:\n",
+    "    if temperature > 70:\n",
+    "        temperaturesGreaterThat70 = temperaturesGreaterThat70 + 1\n",
+    "    else:\n",
+    "        temperaturesGreaterThat70 = 0\n",
+    "print()\n",
+    "\n",
+    "print('>>>The temperature is greater than 70ºC during more than 4 consecutive hours')\n",
+    "caseD = len(greaterThan70) > 4\n",
+    "print(caseD)\n",
+    "    \n",
+    "print('>>>Any temperature is above 80ºC.')\n",
+    "caseB = len(getAllTemperaturesAbove(temperatures_C, 80)) > 0\n",
+    "print(caseB)\n",
+    "\n",
+    "print('>>>The average temperature exceeds 65ºC.')\n",
+    "caseC = meanTemperature > 65\n",
+    "print(caseC)\n",
+    "    \n",
+    "needsReplacement = caseD and caseB and caseC\n",
+    "print('System needs replacement:', needsReplacement)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,10 +381,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System needs replacement: False\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "needsReplacement = caseD and caseB and caseC\n",
+    "print('System needs replacement:', needsReplacement)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,16 +417,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean C 60.25\n",
+      "mean F 140.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "meanTemperatureC = mean(temperatures_C)\n",
+    "meanTemperatureF = mean(temperaturesInF)\n",
+    "print('mean C', meanTemperatureC)\n",
+    "print('mean F', meanTemperatureF)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "[2.76969696969697, 2.284848484848485, 2.292307692307692, 2.342372881355932, 2.3333333333333335, 2.3161290322580648, 2.3, 2.257142857142857, 2.2210526315789476, 2.2, 2.195061728395062, 2.2, 2.185542168674699, 2.1555555555555554, 2.2050632911392407, 2.3245901639344266, 2.4037735849056605, 2.44, 2.453061224489796, 2.4037735849056605, 2.466666666666667, 2.511111111111111, 2.6205128205128205]\n",
+      "\n",
+      "\n",
+      "stdDevC 19.285681216902866\n",
+      "stdDevF 34.71422619042516\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxTemps = len(temperatures_C)\n",
+    "divs = []\n",
+    "\n",
+    "for i in range(0, maxTemps):\n",
+    "    if temperatures_C[i] == 0:\n",
+    "        continue\n",
+    "    divs.append(temperaturesInF[i] / temperatures_C[i])\n",
+    "\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print(divs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "stdDevC = stdDev(temperatures_C)\n",
+    "stdDevF = stdDev(temperaturesInF)\n",
+    "\n",
+    "print()\n",
+    "print()\n",
+    "print('stdDevC', stdDevC)\n",
+    "print('stdDevF', stdDevF)"
    ]
   },
   {
